--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,6 +46,7 @@ article p {
     border: 2px solid rgb(36, 119, 214);
     padding: 8px 15px;
     border-radius: 5px;
+    margin-top: 15px;
 }
 
 .publish {
