--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,3 +55,9 @@ article p {
     margin: 5px 0;
     color: rgb(47, 47, 138);
 }
+
+.category {
+    border: 2px solid rgba(255, 0, 0, 0.192);
+    padding: 5px;
+    border-radius: 5px;
+}
